# app

./: .gitignore  Dockerfile  README.md  docker-compose.yml
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  api.js  main.js
client/src/assets/: base.scss  main.scss
client/src/router/: index.js
client/src/stores/: userStore.js
client/src/views/: 404View.vue  LoginView.vue  ProjectAddView.vue  ProjectView.vue  ProjectsView.vue  ProviderAddView.vue  ProviderView.vue  ProvidersView.vue
server/: app.py  database.py  encryption.py  manifest.py  password.py  pyproject.toml
