[tool.poetry]
name = "cms-cloud-manager-frontend"
version = "0.1.0"
description = ""
authors = ["CMS Cloud Manager"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
